Ajout de texte dans le index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <pre>warning: only fun people here</pre>
+    <pre>Ce texte a était écrit par Emilie</pre>
   </body>
 </html>
